--- a/src/main/resources/templates/account/accountById.html
+++ b/src/main/resources/templates/account/accountById.html
@@ -3,25 +3,92 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymleaf.org">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-    <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Account</title>
+    <style>
+        #accountinfo {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        #accountinfo td, #accountinfo th {
+            border: 1px solid #ddd;
+            padding: 8px;
+        }
+
+        #accountinfo tr:nth-child(even){background-color: #f2f2f2;}
+
+        #accountinfo tr:hover {background-color: #ddd;}
+
+        #accountinfo th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: left;
+            background-color: #04AA6D;
+            color: white;
+        }
+        .editButton {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+
+        .deleteButton {
+            background-color: #ff0312;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-<table>
+<table id="accountinfo">
     <thead>
     <tr>
         <th> Login </th>
         <th> Password </th>
+        <th> First Name</th>
+        <th>Last Name</th>
+        <th>Patronymic</th>
+        <th>Phone Number</th>
+        <th>Balance</th>
+        <th>Options</th>
     </tr>
     </thead>
     <tbody>
     <tr>
         <td><span th:text="${account.login}"> Login </span></td>
         <td><span th:text="${account.password}"> Password </span></td>
+        <td><span th:text="${accountInfo.firstname}"> FirstName </span></td>
+        <td><span th:text="${accountInfo.lastname}"> SecondName </span></td>
+        <td><span th:text="${accountInfo.patronymic}"> Patronymic </span></td>
+        <td><span th:text="${accountInfo.phoneNumber}"> PhoneNumber </span></td>
+        <td><span th:text="${accountInfo.balance}"> Balance </span></td>
+        <td>
+            <form th:method="GET" th:action="@{/account/{id}/edit(id=${account.getId()})}" th:object="${account}">
+                <div>
+                    <input type="submit" class="editButton" value="Edit">
+                </div>
+            </form>
+            <form th:method="GET" th:object="${account}">
+                <div>
+                    <input type="submit" class="deleteButton" value="Delete">
+                </div>
+            </form>
+        </td>
     </tr>
     </tbody>
 </table>
