--- a/src/main/resources/templates/account/accounts.html
+++ b/src/main/resources/templates/account/accounts.html
@@ -4,20 +4,61 @@
       xmlns:th="http://www.thymleaf.org">
 <head>
     <title>All accounts</title>
-    <style type='text/css'>
-        table.test { border-collapse: collapse; }
-        table.test td { border-bottom: 1px solid black;
-            border-right: solid black 1px;
-            border-left: solid black 1px;}
+    <style>
+        #accountinfo {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        #accountinfo td, #accountinfo th {
+            border: 1px solid #ddd;
+            padding: 8px;
+        }
+
+        #accountinfo tr:nth-child(even){background-color: #f2f2f2;}
+
+        #accountinfo tr:hover {background-color: #ddd;}
+
+        #accountinfo th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: left;
+            background-color: #04AA6D;
+            color: white;
+        }
+        a:link, a:visited {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+        }
+        a:hover, a:active {
+            background-color: #4CAF50;
+        }
+        .button {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-<table class="test">
+<table id="accountinfo">
     <thead>
     <tr>
         <th> Id </th>
         <th> Login </th>
-        <th> Password </th>
+        <th>Edit</th>
     </tr>
     </thead>
     <tbody>
@@ -26,12 +67,11 @@
     </tr>
     <tr th:each="acc : ${accounts}">
         <td><span th:text="${acc.getId()}"> Id </span></td>
-        <td><span th:text="${acc.login}"> Login </span></td>
-        <td><span th:text="${acc.password}"> Password </span></td>
+        <td><span th:text="${acc.getLogin()}"> Login </span></td>
         <td>
-            <form th:method="GET"th:action="@{/account/{id}/edit(id=${acc.getId()})}" th:object="${account}">
+            <form th:method="GET"th:action="@{/account/{id}(id=${acc.getId()})}" th:object="${account}">
                 <div>
-                    <input type="submit" value="Edit account!">
+                    <input type="submit" class="button" value="More info">
                 </div>
             </form>
         </td>
