--- a/src/main/resources/templates/account/edit.html
+++ b/src/main/resources/templates/account/edit.html
@@ -4,16 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit account</title>
+    <style>
+        input[type=text]:focus {
+            border: 3px solid #04AA6D;
+        }
+        input[type=text] {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            box-sizing: border-box;
+            border: none;
+            background-color: #3CBC8D;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-<form th:method="POST" th:action="@{/account/{id}(id=${account.getId()})}" th:object="${account}">
+<form th:method="POST" th:action="@{/account/{id}(id=${account.getId()})}">
     <div>
         <label for="login">Login</label>
-        <input type="text" th:field = "*{login}" id="login" >
+        <input type="text" th:field = "*{account.login}" id="login" >
         <br/>
 
         <label for="password">Password</label>
-        <input type="text" th:field = "*{password}" id="password">
+        <input type="text" th:field = "*{account.password}" id="password">
+        <br/>
+
+        <label for="firstname">FirstName</label>
+        <input type="text" th:field = "*{accountInfo.firstname}" id="firstname">
+        <br/>
+
+        <label for="lastname">LastName</label>
+        <input type="text" th:field = "*{accountInfo.lastname}" id="lastname">
+        <br/>
+
+        <label for="patronymic">Patronymic</label>
+        <input type="text" th:field = "*{accountInfo.patronymic}" id="patronymic">
+        <br/>
+
+        <label for="phonenumber">Phone Number</label>
+        <input type="text" th:field = "*{accountInfo.phoneNumber}" id="phonenumber">
+        <br/>
+
+        <label for="balance">Balance</label>
+        <input type="text" th:field = "*{accountInfo.balance}" id="balance">
         <br/>
 
         <input type="submit" value="Update!">
