--- a/src/main/resources/templates/account/edit.html
+++ b/src/main/resources/templates/account/edit.html
@@ -17,6 +17,18 @@
             background-color: #3CBC8D;
             color: white;
         }
+        .button {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -24,33 +36,40 @@
     <div>
         <label for="login">Login</label>
         <input type="text" th:field = "*{account.login}" id="login" >
+        <div style="color: red" th:if = "${#fields.hasErrors('account.login')}" th:errors = "*{account.login}">Login error</div>
         <br/>
 
         <label for="password">Password</label>
         <input type="text" th:field = "*{account.password}" id="password">
+        <div style="color: red" th:if = "${#fields.hasErrors('account.password')}" th:errors = "*{account.password}">Password error</div>
         <br/>
 
         <label for="firstname">FirstName</label>
         <input type="text" th:field = "*{accountInfo.firstname}" id="firstname">
+        <div style="color: red" th:if = "${#fields.hasErrors('accountInfo.firstname')}" th:errors = "*{accountInfo.firstname}">Firstname error</div>
         <br/>
 
         <label for="lastname">LastName</label>
         <input type="text" th:field = "*{accountInfo.lastname}" id="lastname">
+        <div style="color: red" th:if = "${#fields.hasErrors('accountInfo.lastname')}" th:errors = "*{accountInfo.lastname}">Lastname error</div>
         <br/>
 
         <label for="patronymic">Patronymic</label>
         <input type="text" th:field = "*{accountInfo.patronymic}" id="patronymic">
+        <div style="color: red" th:if = "${#fields.hasErrors('accountInfo.patronymic')}" th:errors = "*{accountInfo.patronymic}">Patronymic error</div>
         <br/>
 
         <label for="phonenumber">Phone Number</label>
         <input type="text" th:field = "*{accountInfo.phoneNumber}" id="phonenumber">
+        <div style="color: red" th:if = "${#fields.hasErrors('accountInfo.phoneNumber')}" th:errors = "*{accountInfo.phoneNumber}">Phonenumber error</div>
         <br/>
 
         <label for="balance">Balance</label>
         <input type="text" th:field = "*{accountInfo.balance}" id="balance">
+        <div style="color: red" th:if = "${#fields.hasErrors('accountInfo.balance')}" th:errors = "*{accountInfo.balance}">Balance error</div>
         <br/>
 
-        <input type="submit" value="Update!">
+        <input type="submit" class="button" value="Update!">
     </div>
 </form>
 </body>
